--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -123,6 +123,9 @@
 
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
 		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
+		
+		<io.micrometer.prometheus.version>1.4.2</io.micrometer.prometheus.version>
+
 	</properties>
 
 	<dependencies>
