--- a/docker/biosdk/tech5/Dockerfile-authentication-otp-service-softhsmclient
+++ b/docker/biosdk/tech5/Dockerfile-authentication-otp-service-softhsmclient
@@ -61,7 +61,7 @@ CMD if [ "$is_glowroot_env" = "present" ]; then \
     apt-get update && apt-get install -y unzip ; \
     unzip glowroot.zip ; \
     rm -rf glowroot.zip ; \
-    sed -i 's/<service_name>/${current_module_env}/g' glowroot/glowroot.properties ; \
+    sed -i "s/<service_name>/${current_module_env}/g" glowroot/glowroot.properties ; \
     java -jar -Djava.security.debug=sunpkcs11 -javaagent:glowroot/glowroot.jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" ${current_module_env}.jar ; \
     else \
     java -jar -Djava.security.debug=sunpkcs11 -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" ${current_module_env}.jar ; \
