--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -64,7 +64,7 @@
 		<module>authentication-internal-service</module>
 		<module>authentication-kyc-service</module>
 		<module>authentication-otp-service</module>
-		<!-- <module>authentication-keys-generator</module> -->
+		<module>authentication-keys-generator</module>
 	</modules>
 
 	<properties>
