--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -6,7 +6,10 @@ name: Maven Package upon a pull request
 on:
   pull_request:
     types: [closed]
-  
+  push:
+    branches:
+      - master
+      - 1.1.* 
 jobs:
   build:
 
