--- a/authentication/authentication-keys-generator/pom.xml
+++ b/authentication/authentication-keys-generator/pom.xml
@@ -3,10 +3,10 @@
   <parent>
     <groupId>io.mosip.authentication</groupId>
 	<artifactId>authentication-parent</artifactId>
-	<version>1.0.10-SNAPSHOT</version>
+	<version>1.0.10-rc1</version>
   </parent>
   <artifactId>authentication-keys-generator</artifactId>
-  <version>1.0.10-SNAPSHOT</version>
+  <version>1.0.10-rc1</version>
   
   <dependencies>
   	<dependency>
